--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
                 <form action="site.js" autocomplete="on" method="post">
                     <h1>Login</h1>
                     <div class="campo">
+                        input:
                         <input type="email" name="email" id="iemail" placeholder="Username" autocomplete="username" required maxlength="15">
                     </div>
                     <div class="campo">
-                        <input type="password" name="senha" id="isenha" required minlength="8" maxlength="20" placeholder="Passoword">
+                        <input type="password" name="senha" id="isenha" required minlength="8" maxlength="20" placeholder="Password">
 
                     </div>
 
