alterei a forma de login

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <h1>Login</h1>
                     <div class="campo">
                         input:
-                        <input type="email" name="email" id="iemail" placeholder="Username" autocomplete="username" required maxlength="15">
+                        <input type="text" name="username" id="iusername" placeholder="Username" autocomplete="username" required maxlength="15">
                     </div>
                     <div class="campo">
                         <input type="password" name="senha" id="isenha" required minlength="8" maxlength="20" placeholder="Password">
