Arrumei alguns nomes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
                 <form action="site.js" autocomplete="on" method="post">
                     <h1>Login</h1>
                     <div class="campo">
-                        input:
                         <input type="text" name="username" id="iusername" placeholder="Username" autocomplete="username" required maxlength="15">
                     </div>
                     <div class="campo">
@@ -27,8 +26,8 @@
                     </div>
 
                     <div class="sing">
-                            <input type="submit" value="Entrar">
-                            <a href="#" class="esqueci">Esqueci a senha</a>
+                            <input type="submit" value="Sing in">
+                            <a href="#" class="esqueci">I forgot the password</a>
                     </div>
                 </form>
             </div>
